# Raw2Fits

./: AUTHORS  CMakeLists.txt  Changes  Makefile  README.md  THANKS
config/: sample.config
debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  raw2fits.cron.d.ex  raw2fits.doc-base.ex  rules  watch.ex
desktop/: raw2fits.desktop
glade/: cr2fits.ui  ui.glade
include/: config_loader.h  converter.h  converter_types.h  coords_calc.h  file_utils.h  list.h  raw2fits.h  thread_pool.h  version.h
sampleraw/: 05.cr2.REMOVED.git-id  RAW_FUJI_X10.RAF.REMOVED.git-id  RAW_HASSELBLAD_CFV.3FR.REMOVED.git-id  RAW_MINOLTA_DIMAGE_A200.MRW.REMOVED.git-id  RAW_NIKON_D5300.NEF.REMOVED.git-id  RAW_OLYMPUS_E500.ORF.REMOVED.git-id  RAW_PENTAX_K-7.PEF.REMOVED.git-id  RAW_SONY_A700.ARW.REMOVED.git-id  RAW_SONY_ILCA-77M2.ARW.REMOVED.git-id  _MG_0178.CR2.REMOVED.git-id  _MG_0179.CR2.REMOVED.git-id  _MG_0180.CR2.REMOVED.git-id  _MG_0181.CR2.REMOVED.git-id  _MG_6363.CR2.REMOVED.git-id  _MG_6418.CR2.REMOVED.git-id
src/: config_loader.c  converter.c  converter.h  converter_types.h  coords_calc.c  file_utils.c  file_utils.h  list.c  list.h  main.c  main_cli.c  raw2fits.c  raw2fits.h  thread_pool.c  thread_pool.h
